Attempting to fix mobile skills display. Changed Arlo logo to my name on mobile

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2169,6 +2169,11 @@ div.list_wrap ul li.skill_image {
 /*	14) ARLO MOBILE HEADER
 /*---------------------------------------------------*/
 
+.mobile_header {
+	color: white;
+	font-size: 24px;
+}
+
 .arlo_tm_mobile_header_wrap{
 	width: 100%;
 	height: auto;
@@ -2367,7 +2372,7 @@ div.list_wrap ul li.skill_image {
 	.arlo_tm_title_holder h3{font-size: 45px;}
 	.arlo_tm_title_holder:before{top: -2px;}
 	.arlo_tm_services_wrap .list_wrap ul{margin: 0px;}
-	.arlo_tm_services_wrap .list_wrap ul li{width: 50%;padding-left: 0px;}
+	.arlo_tm_services_wrap .list_wrap ul li{width: 49.9%;padding-left: 0px;}
 	.arlo_tm_counter_list li{width: 50%;}
 	.arlo_tm_counter_list li .inner{padding: 45px 15px 48px 15px;}
 	.arlo_tm_portfolio_list > li{width: 50%;}
